# p4dtg

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  RELNOTES.txt
sdk/: CMakeLists.txt  README  buildingplugins.txt  howto.txt  stepbystep.txt
sdk/bugz/: CMakeLists.txt  DTG-mod-bugz.cc  MyDTG.cc  MyDTG.h  MyDTGDefect.cc  MyDTGProj.cc  MyDTS.cc  MyDTS.h  README.p4dti.txt  README.src  README.txt  changeid.pl  dti_to_dtg.pl  jobspec.txt  mk_dtgdtissue.pl  patch.bugzilla-3  patch.bugzilla-3.4  patch.bugzilla-3.6.2  patch.bugzilla-4.0  patch.bugzilla-4.4  sql.txt
sdk/include/: DTG-interface.h  DTG-platforms.h  DTG-typedefs.h  README
sdk/jira-rest/: CMakeLists.txt  DTG-XML.txt  DTG-mod-jirarest.cc  MyDTG.cc  MyDTG.h  MyDTGDefect.cc  MyDTGProj.cc  MyDTS.cc  MyDTS.h  README.rest.src  README.rest.txt  TcpXML.cc  TcpXML.h  jobspec.txt
sdk/jira-rest/java/: build.gradle  settings.gradle
sdk/jira-rest/java/resources/: jira-rest-config.xml
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/common/: Constants.java  TimeCommand.java  Utils.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/config/: Base.java  Configuration.java  CustomField.java  Option.java  ResolutionTransition.java  Step.java  Transition.java  Workflow.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/logging/: FileHandler.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/rest/client/: BearerHttpAuthenticationHandler.java  ExtendedIssueRestClient.java  ExtendedMetadataRestClient.java  P4AsynchronousHttpClientFactory.java  RestClientManager.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/rest/internal/client/: AsynchronousExtendedIssueRestClient.java  AsynchronousExtendedMetadataRestClient.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/rest/internal/search/: JqlSearcher.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/rest/search/: SearchService.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/tcp/internal/request/: AbstractRequestHandler.java  DefaultDefectFieldsMapBuilder.java  DefectCustomFieldsMapBuilder.java  DefectFieldsMapBuilder.java  DefectFieldsTranslator.java  IssueFieldsMapper.java  IssueInputFieldsBuilder.java  (+6 more)
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/tcp/request/: IRequestHandler.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/tcp/response/: IResponse.java
sdk/jira-rest/java/src/main/java/com/perforce/p4dtg/plugin/jira/tcp/server/: TcpSocketServer.java
sdk/jira-rest/java/src/test/java/com/perforce/p4dtg/plugin/jira/config/: ConfigurationTest.java  ConfigurationTestHelper.java
sdk/jira-rest/java/src/test/resources/com/perforce/p4dtg/plugin/jira/config/testfiles/: AllIssues.xml  CustomFields.xml  HasIgnoreFiles.xml  IgnoreJBONE.xml  JiraCloud.xml  NoIgnoreFiles.xml  UserStylesBad.xml  UserStylesGood.xml
sdk/mydts/: CMakeLists.txt  DTG-mod-mydts.cc  MyDTG.cc  MyDTG.h  MyDTGDefect.cc  MyDTGProj.cc  MyDTS.cc  MyDTS.h  README
sdk/mysql/: CMakeLists.txt  DTG-mod-mysql5.cc  MyDTG.cc  MyDTG.h  MyDTGDefect.cc  MyDTGProj.cc  MyDTS.cc  MyDTS.h  README.src  README.txt  import.pl
sdk/p4jobdt/: CMakeLists.txt  DTG-mod-p4.cc  MyDTG.cc  MyDTG.h  MyDTGDefect.cc  MyDTGProj.cc  MyDTS.cc  MyDTS.h  P4MetaClient.cc  P4MetaClient.h  README  StrArr.h  p4charcvt.cc  p4charcvt.h  p4jobs.rc  p4utils.cc
sdk/share/: CMakeLists.txt  DTGModule.cc  DTGModule.h  README  dtg-str.cc  dtg-str.h  dtg-utils.c  dtg-utils.h  resource.h
sdk/test/: CMakeLists.txt  README  dtgtest.cc  p4dtg-test.rc
sdk/test/tests/: pl-test.txt  pq-test.txt  td-01.txt
src/: CMakeLists.txt
src/doc/: CreateDTGPlugins.odp  CreateDTGPlugins.ppt  FilteredRep.txt  P4DTGSupport.odp  P4DTGSupport.ppt  PluginDev.doc  PluginDevFig1.ai  PluginDevFig1.eps  configure.cache  data.txt  dt-sdk-reqs.doc  dt-sdk-spec.doc  layout.txt
src/doc/ProtoDTG/: DTSDialog.ui  MainDialog.ui  MapDialog.ui  P4Dialog.ui
src/ntservice/: CMakeLists.txt  Service.cc  Service.h  Simple.cc  dtgservice.cc  p4dtg-service.rc  readme.txt  startsvc.cc
src/p4dtg-config/: AttrEdit.cc  AttrEdit.h  CMakeLists.txt  DTGHelp.h  DTSEdit.cc  DTSEdit.h  DTSTab.cc  DTSTab.cc-tab  DTSTab.h  DTSTab.h-tab  FixMap.cc  FixMap.h  Help.cc  Help.h  ListSource.cc  ListSource.h  MainDialog.cc  MainDialog.h  MapEdit.cc  MapEdit.h  MapTab.cc  MapTab.h  NewMap.cc  NewMap.h  P4DTG.cc  P4DTG.h  P4Edit.cc  P4Edit.h  P4Tab.cc  P4Tab.h  PickList.cc  PickList.h  SegEdit.cc  SegEdit.h  SelectMap.cc  SelectMap.h  about-foot.html  about-head.html  create-dirs.ps1  dtgconfig.cc  (+1 more)
src/p4dtg-config/bug/: AttrEdit.cc  AttrEdit.h  MainDialog.cc  MainDialog.h  build.sh  dtgconfig.cc
src/p4dtg-config/config/: map-TestMapping.xml  src-TestDTS.xml  src-TestSCM.xml
src/p4dtg-config/config.empty/: map-abc.xml  src-1111.xml  src-2222.xml  src-ccc.xml
src/p4dtg-config/config.real/: set-TestMapping.xml  src-AlanDepot.xml  src-InternalApps.xml  src-InternalDepot.xml  src-P4VJobs.xml  src-TestDTS.xml  src-TestSCM.xml
src/p4dtg-config/help/: DTSEdit.html  DTSTab.html  MapEdit.html  MapTab.html  NewMap.html  P4Edit.html  P4Tab.html  SelectMap.html  index.html
src/p4dtg-repl/: CMakeLists.txt  Unify.cc  Unify.h  dtgrepl.cc  p4dtg-repl.rc  process.cc  utils.cc  utils.h
src/p4dtg-repl/config/: map-1122.xml  map-223344.xml  map-QCmap.xml  map-SampleMapping.xml  map-dtg2todtg3.xml  map-ttt.xml  set-SampleMapping.xml  set-dtg2todtg3.xml  set-ttt.xml  src-1111.xml  src-2222.xml  src-3344.xml  src-G.xml  src-JW.xml  src-P4depot.xml  src-SampleDTS.xml  src-SampleSCM.xml  src-dtg2.xml  src-dtg3.xml  src-local.xml
src/p4dtg-repl/tests/: P4Form.rb  changelist.sh  fixes.rb  jobspec.txt  newjob.sh  p4d.sh  p4setup.admin  p4user.setup
src/share/: CMakeLists.txt  DTG.dtd  DTGxml.cc  DTGxml.h  DataAttr.cc  DataAttr.h  DataMapping.cc  DataMapping.h  DataSource.cc  DataSource.h  Logger.cc  Logger.h  Settings.cc  Settings.h  genutils.cc  genutils.h  plugins.cc  plugins.h  scandir.cc  svcutils.cc  tinyxml.cpp
(+11 files in other folders)
